Bug 15091 - Compile error in source3/utils/regedit_hexedit.c
Summary: Compile error in source3/utils/regedit_hexedit.c
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.15.7
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-09 04:46 UTC by Stefan Metzmacher
Modified: 2022-06-28 06:52 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-15-test (1.55 KB, patch)
2022-06-09 04:52 UTC, Stefan Metzmacher
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2022-06-09 04:46:24 UTC
We need to backport this:

commit cc3081cebfb65181cd291702cb6a2e727dc999b2
Author:     Andreas Schneider <asn@samba.org>
AuthorDate: Fri Oct 1 10:46:09 2021 +0200
Commit:     Uri Simchoni <uri@samba.org>
CommitDate: Mon Oct 4 10:43:37 2021 +0000

    s3:utils: Fix format error
    
    regedit_hexedit.c:166:39: error: format ‘%X’ expects argument of type ‘unsigned
    int’, but argument 3 has type ‘size_t’ {aka ‘long unsigned int’}
      166 |                 wprintw(buf->win, "%08X  ", off);
          |                                    ~~~^     ~~~
          |                                       |     |
          |                                       |     size_t {aka long unsigned int}
          |                                       unsigned int
          |                                    %08lX
    
    Signed-off-by: Andreas Schneider <asn@samba.org>
    Reviewed-by: Uri Simchoni <uri@samba.org>
Comment 1 Stefan Metzmacher 2022-06-09 04:52:31 UTC
Created attachment 17330 [details]
Patch for v4-15-test
Comment 2 Samba QA Contact 2022-06-09 15:03:10 UTC
This bug was referenced in samba v4-15-test:

f3879b3f09d288170fb742ef90d52c582e44a58a
Comment 3 Samba QA Contact 2022-06-28 06:52:24 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.8):

f3879b3f09d288170fb742ef90d52c582e44a58a