s3:utils: Fix format error

regedit_hexedit.c:166:39: error: format ‘%X’ expects argument of type ‘unsigned
int’, but argument 3 has type ‘size_t’ {aka ‘long unsigned int’}
  166 |                 wprintw(buf->win, "%08X  ", off);
      |                                    ~~~^     ~~~
      |                                       |     |
      |                                       |     size_t {aka long unsigned int}
      |                                       unsigned int
      |                                    %08lX

Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Uri Simchoni <uri@samba.org>

(cherry picked from commit cc3081cebfb65181cd291702cb6a2e727dc999b2)
BUG: https://bugzilla.samba.org/show_bug.cgi?id=15091
Reviewed-by: Stefan Metzmacher <metze@samba.org>